Nov 18, 2019
  -code cleanup

v 1.0.0, Mar 04, 2019
  -RNACentral xdb ids loaded by matching REFSEQ accessions