@@ -24,12 +24,13 @@ repositories {
 
 
 dependencies {
-    compile 'org.apache.commons:commons-dbcp2:2.6.0'
+    compile 'org.apache.commons:commons-collections4:4.4'
+    compile 'org.apache.commons:commons-dbcp2:2.7.0'
     compile 'commons-net:commons-net:3.6'
-    compile 'org.apache.httpcomponents:httpclient:4.5.8'
+    compile 'org.apache.httpcomponents:httpclient:4.5.9'
     compile 'log4j:log4j:1.2.17'
-    compile 'org.springframework:spring-beans:5.1.6.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.1.6.RELEASE'
+    compile 'org.springframework:spring-beans:5.1.7.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.1.7.RELEASE'
     compile 'com.oracle:ojdbc6:11.2.0.4.0-atlassian-hosted'
 	
     compile fileTree(dir: 'lib', include: '*.jar')
