@@ -1,3 +1,6 @@
+Jan 29, 2020
+  -qc now done by apache CollectionUtils
+
 Nov 18, 2019
   -code cleanup
 
